--- a/.env
+++ b/.env
@@ -2,4 +2,5 @@ NEXT_PUBLIC_ALGOLIA_APP_ID=
 NEXT_PUBLIC_ALGOLIA_INDEX=
 NEXT_PUBLIC_ALGOLIA_SEARCH_KEY=
 NEXT_PUBLIC_BLASEBALL_REFERENCE_API_URL=https://blaseball-reference.nyc3.digitaloceanspaces.com/public/json-data
+NEXT_PUBLIC_DEPLOYMENT_ENV=preview
 NEXT_PUBLIC_HEAP_IO_KEY=
