--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "build:index": "node ./.next/serverless/scripts/generate-index.js",
+    "build:index": "next build && node ./.next/serverless/scripts/generate-index.js",
     "start": "next start"
   },
   "dependencies": {
@@ -18,19 +18,19 @@
     "@chakra-ui/theme-tools": "1.0.0-rc.0",
     "@reach/combobox": "^0.11.2",
     "@reach/skip-nav": "^0.11.2",
-    "algoliasearch": "^4.4.0",
+    "algoliasearch": "^4.5.1",
     "lodash.debounce": "^4.0.8",
     "next": "^9.5.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-table": "^7.5.0",
+    "react-table": "^7.5.1",
     "sitemap": "^6.3.0",
-    "swr": "^0.3.2"
+    "swr": "^0.3.3"
   },
   "devDependencies": {
-    "@types/node": "^14.10.1",
+    "@types/node": "^14.11.1",
     "@types/react": "^16.9.49",
     "globby": "^11.0.1",
-    "typescript": "^4.0.2"
+    "typescript": "^4.0.3"
   }
 }
