--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "^9.5.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-icons": "^3.11.0",
     "react-table": "^7.5.1",
     "sitemap": "^6.3.0",
     "swr": "^0.3.3"
