--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lodash.debounce": "^4.0.8",
     "next": "^9.5.3",
     "react": "^16.13.1",
+    "react-cookie": "^4.0.3",
     "react-dom": "^16.13.1",
     "react-icons": "^3.11.0",
     "react-table": "^7.5.1",
