--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/node": "^14.11.1",
     "@types/react": "^16.9.49",
     "globby": "^11.0.1",
+    "prettier": "^2.1.2",
     "typescript": "^4.0.3"
   }
 }
