--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "lodash.debounce": "^4.0.8",
     "next": "^9.5.3",
     "react": "^16.13.1",
+    "react-cookie": "^4.0.3",
     "react-dom": "^16.13.1",
+    "react-icons": "^3.11.0",
     "react-table": "^7.5.1",
     "sitemap": "^6.3.0",
     "swr": "^0.3.3"
@@ -31,6 +33,7 @@
     "@types/node": "^14.11.1",
     "@types/react": "^16.9.49",
     "globby": "^11.0.1",
+    "prettier": "^2.1.2",
     "typescript": "^4.0.3"
   }
 }
