--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@chakra-ui/theme-tools": "1.0.0-rc.0",
     "@reach/combobox": "^0.11.2",
     "@reach/skip-nav": "^0.11.2",
+    "@zeit/fetch-retry": "^5.0.0",
     "algoliasearch": "^4.5.1",
     "lodash.debounce": "^4.0.8",
     "next": "^9.5.3",
