--- a/package.json
+++ b/package.json
@@ -21,19 +21,20 @@
     "@zeit/fetch-retry": "^5.0.0",
     "algoliasearch": "^4.5.1",
     "lodash.debounce": "^4.0.8",
-    "next": "^9.5.3",
+    "next": "^9.5.4",
+    "node-fetch": "^2.6.1",
     "react": "^16.13.1",
     "react-cookie": "^4.0.3",
     "react-csv": "^2.0.3",
     "react-dom": "^16.13.1",
     "react-icons": "^3.11.0",
-    "react-table": "^7.5.1",
-    "sitemap": "^6.3.0",
-    "swr": "^0.3.3"
+    "react-table": "^7.5.2",
+    "sitemap": "^6.3.2",
+    "swr": "^0.3.5"
   },
   "devDependencies": {
-    "@types/node": "^14.11.1",
-    "@types/react": "^16.9.49",
+    "@types/node": "^14.11.7",
+    "@types/react": "^16.9.51",
     "globby": "^11.0.1",
     "prettier": "^2.1.2",
     "typescript": "^4.0.3"
