--- a/package.json
+++ b/package.json
@@ -11,32 +11,40 @@
     "start": "next start"
   },
   "dependencies": {
-    "@chakra-ui/core": "1.0.0-rc.0",
-    "@chakra-ui/icons": "1.0.0-rc.0",
-    "@chakra-ui/system": "1.0.0-rc.0",
-    "@chakra-ui/theme": "1.0.0-rc.0",
-    "@chakra-ui/theme-tools": "1.0.0-rc.0",
+    "@chakra-ui/core": "^1.0.0-rc.8",
+    "@chakra-ui/icons": "^1.0.0-rc.8",
+    "@chakra-ui/system": "^1.0.0-rc.8",
+    "@chakra-ui/theme": "^1.0.0-rc.8",
+    "@chakra-ui/theme-tools": "^1.0.0-rc.8",
     "@reach/combobox": "^0.11.2",
     "@reach/skip-nav": "^0.11.2",
-    "@zeit/fetch-retry": "^5.0.0",
-    "algoliasearch": "^4.5.1",
+    "@zeit/fetch-retry": "^5.0.1",
+    "algoliasearch": "^4.6.0",
+    "framer-motion": "^2.9.4",
     "lodash.debounce": "^4.0.8",
-    "next": "^9.5.4",
+    "next": "^10.0.1",
     "node-fetch": "^2.6.1",
-    "react": "^16.13.1",
+    "react": "^17.0.1",
     "react-cookie": "^4.0.3",
     "react-csv": "^2.0.3",
-    "react-dom": "^16.13.1",
+    "react-dom": "^17.0.1",
     "react-icons": "^3.11.0",
-    "react-table": "^7.5.2",
-    "sitemap": "^6.3.2",
-    "swr": "^0.3.5"
+    "react-table": "^7.6.1",
+    "sitemap": "^6.3.3",
+    "swr": "^0.3.8"
   },
   "devDependencies": {
-    "@types/node": "^14.11.7",
-    "@types/react": "^16.9.51",
+    "@types/node": "^14.14.6",
+    "@types/react": "^16.9.55",
+    "@types/react-table": "^7.0.25",
+    "@typescript-eslint/eslint-plugin": "^4.6.1",
+    "@typescript-eslint/parser": "^4.6.1",
+    "eslint": "^7.12.1",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.21.5",
     "globby": "^11.0.1",
     "prettier": "^2.1.2",
-    "typescript": "^4.0.3"
+    "typescript": "^4.0.5"
   }
 }
