--- a/.github/workflows/search-index.yml
+++ b/.github/workflows/search-index.yml
@@ -1,7 +1,7 @@
 name: Build search index
 on:
   schedule:
-    - cron: "0 * * * *"
+    - cron: "0 */6 * * *"
   workflow_dispatch:
 jobs:
   build-index:
@@ -11,7 +11,7 @@ jobs:
       - name: Use Node.js
         uses: actions/setup-node@v1
         with:
-          node-version: "13.x"
+          node-version: "14.x"
       - name: Install dependencies
         run: yarn
       - run: yarn build:index
