--- a/package.json
+++ b/package.json
@@ -11,40 +11,42 @@
     "start": "next start"
   },
   "dependencies": {
-    "@chakra-ui/core": "^1.0.0-rc.8",
-    "@chakra-ui/icons": "^1.0.0-rc.8",
-    "@chakra-ui/system": "^1.0.0-rc.8",
-    "@chakra-ui/theme": "^1.0.0-rc.8",
-    "@chakra-ui/theme-tools": "^1.0.0-rc.8",
+    "@chakra-ui/icons": "^1.0.1",
+    "@chakra-ui/react": "^1.0.1",
+    "@chakra-ui/system": "^1.0.1",
+    "@chakra-ui/theme": "^1.0.1",
+    "@chakra-ui/theme-tools": "^1.0.1",
+    "@emotion/react": "^11.1.1",
+    "@emotion/styled": "^11.0.0",
     "@reach/combobox": "^0.11.2",
     "@reach/skip-nav": "^0.11.2",
     "@zeit/fetch-retry": "^5.0.1",
-    "algoliasearch": "^4.6.0",
+    "algoliasearch": "^4.8.0",
     "framer-motion": "^2.9.4",
     "lodash.debounce": "^4.0.8",
-    "next": "^10.0.1",
+    "next": "^10.0.2",
     "node-fetch": "^2.6.1",
     "react": "^17.0.1",
     "react-cookie": "^4.0.3",
     "react-csv": "^2.0.3",
     "react-dom": "^17.0.1",
     "react-icons": "^3.11.0",
-    "react-table": "^7.6.1",
+    "react-table": "^7.6.2",
     "sitemap": "^6.3.3",
-    "swr": "^0.3.8"
+    "swr": "^0.3.9"
   },
   "devDependencies": {
-    "@types/node": "^14.14.6",
-    "@types/react": "^16.9.55",
+    "@types/node": "^14.14.9",
+    "@types/react": "^17.0.0",
     "@types/react-table": "^7.0.25",
-    "@typescript-eslint/eslint-plugin": "^4.6.1",
-    "@typescript-eslint/parser": "^4.6.1",
-    "eslint": "^7.12.1",
+    "@typescript-eslint/eslint-plugin": "^4.8.1",
+    "@typescript-eslint/parser": "^4.8.1",
+    "eslint": "^7.14.0",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.5",
     "globby": "^11.0.1",
-    "prettier": "^2.1.2",
-    "typescript": "^4.0.5"
+    "prettier": "^2.2.0",
+    "typescript": "^4.1.2"
   }
 }
