--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ NEXT_PUBLIC_ALGOLIA_INDEX=
 NEXT_PUBLIC_ALGOLIA_SEARCH_KEY=
 NEXT_PUBLIC_BLASEBALL_REFERENCE_API_URL=https://blaseball-reference.nyc3.digitaloceanspaces.com/public/json-data
 NEXT_PUBLIC_BLASEBALL_WIKI_URL=https://www.blaseball.wiki/w
-NEXT_PUBLIC_DATABLASE_API_URL=http://localhost:3000/v2
+NEXT_PUBLIC_DATABLASE_API_URL=https://api.blaseball-reference.com/v2
 NEXT_PUBLIC_DEPLOYMENT_ENV=preview
 NEXT_PUBLIC_HEAP_IO_KEY=
 NEXT_PUBLIC_REBLASE_URL=https://reblase.sibr.dev
