--- a/package.json
+++ b/package.json
@@ -11,42 +11,44 @@
     "start": "next start"
   },
   "dependencies": {
-    "@chakra-ui/icons": "^1.0.1",
-    "@chakra-ui/react": "^1.0.1",
-    "@chakra-ui/system": "^1.0.1",
-    "@chakra-ui/theme": "^1.0.1",
-    "@chakra-ui/theme-tools": "^1.0.1",
-    "@emotion/react": "^11.1.1",
-    "@emotion/styled": "^11.0.0",
-    "@reach/combobox": "^0.11.2",
-    "@reach/skip-nav": "^0.11.2",
+    "@chakra-ui/icons": "^1.0.5",
+    "@chakra-ui/react": "^1.3.2",
+    "@chakra-ui/system": "^1.3.0",
+    "@chakra-ui/theme": "^1.6.1",
+    "@chakra-ui/theme-tools": "^1.0.4",
+    "@emotion/react": "^11.1.5",
+    "@emotion/styled": "^11.1.5",
+    "@reach/combobox": "^0.13.0",
+    "@reach/skip-nav": "^0.13.0",
     "@zeit/fetch-retry": "^5.0.1",
-    "algoliasearch": "^4.8.0",
-    "framer-motion": "^2.9.4",
+    "algoliasearch": "^4.8.5",
+    "framer-motion": "^3.3.0",
     "lodash.debounce": "^4.0.8",
-    "next": "^10.0.2",
+    "next": "^10.0.6",
     "node-fetch": "^2.6.1",
     "react": "^17.0.1",
     "react-cookie": "^4.0.3",
     "react-csv": "^2.0.3",
     "react-dom": "^17.0.1",
-    "react-icons": "^3.11.0",
-    "react-table": "^7.6.2",
-    "sitemap": "^6.3.3",
-    "swr": "^0.3.9"
+    "react-icons": "^4.2.0",
+    "react-table": "^7.6.3",
+    "sitemap": "^6.3.6",
+    "swr": "^0.4.2"
   },
   "devDependencies": {
-    "@types/node": "^14.14.9",
-    "@types/react": "^17.0.0",
-    "@types/react-table": "^7.0.25",
-    "@typescript-eslint/eslint-plugin": "^4.8.1",
-    "@typescript-eslint/parser": "^4.8.1",
-    "eslint": "^7.14.0",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.21.5",
-    "globby": "^11.0.1",
-    "prettier": "^2.2.0",
-    "typescript": "^4.1.2"
+    "@types/node": "^14.14.25",
+    "@types/react": "^17.0.1",
+    "@types/react-table": "^7.0.28",
+    "@typescript-eslint/eslint-plugin": "^4.15.0",
+    "@typescript-eslint/parser": "^4.15.0",
+    "eslint": "^7.19.0",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "globby": "^11.0.2",
+    "prettier": "^2.2.1",
+    "typescript": "^4.1.5"
   }
 }
