--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@reach/skip-nav": "^0.13.0",
     "@zeit/fetch-retry": "^5.0.1",
     "algoliasearch": "^4.8.5",
+    "faunadb": "^4.1.1",
     "framer-motion": "^3.3.0",
     "lodash.debounce": "^4.0.8",
     "next": "^10.0.6",
@@ -41,6 +42,7 @@
     "@types/react-table": "^7.0.28",
     "@typescript-eslint/eslint-plugin": "^4.15.0",
     "@typescript-eslint/parser": "^4.15.0",
+    "@vercel/node": "^1.9.0",
     "eslint": "^7.19.0",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-jsx-a11y": "^6.4.1",
