Enable Webpack 5 and fix type errors

--- a/.env
+++ b/.env
@@ -4,9 +4,9 @@ FAUNADB_SERVER_SECRET=
 NEXT_PUBLIC_ALGOLIA_APP_ID=
 NEXT_PUBLIC_ALGOLIA_INDEX=
 NEXT_PUBLIC_ALGOLIA_SEARCH_KEY=
-NEXT_PUBLIC_BLASEBALL_REFERENCE_API_URL=https://blaseball-reference.nyc3.digitaloceanspaces.com/public/json-data
+NEXT_PUBLIC_BLASEBALL_REFERENCE_API_URL=https://files.blaseball-reference.com/br-public/json
 NEXT_PUBLIC_BLASEBALL_WIKI_URL=https://www.blaseball.wiki/w
-NEXT_PUBLIC_DATABLASE_API_URL=https://api.blaseball-reference.com/v2
+NEXT_PUBLIC_DATABLASE_API_URL=https://api.sibr.dev/datablase/v2
 NEXT_PUBLIC_DEPLOYMENT_ENV=preview
 NEXT_PUBLIC_HEAP_IO_KEY=
 NEXT_PUBLIC_REBLASE_URL=https://reblase.sibr.dev
