--- a/.env
+++ b/.env
@@ -6,6 +6,7 @@ NEXT_PUBLIC_ALGOLIA_INDEX=
 NEXT_PUBLIC_ALGOLIA_SEARCH_KEY=
 NEXT_PUBLIC_BLASEBALL_REFERENCE_API_URL=https://files.blaseball-reference.com/br-public/json
 NEXT_PUBLIC_BLASEBALL_WIKI_URL=https://www.blaseball.wiki/w
+NEXT_PUBLIC_CHRONICLER_API_URL=https://api.sibr.dev/chronicler
 NEXT_PUBLIC_DATABLASE_API_URL=https://api.sibr.dev/datablase/v2
 NEXT_PUBLIC_DEPLOYMENT_ENV=preview
 NEXT_PUBLIC_HEAP_IO_KEY=
