--- a/.env
+++ b/.env
@@ -1,13 +1,13 @@
-FAUNADB_SECRET=
-FAUNADB_SERVER_SECRET=
+ALGOLIA_ADMIN_KEY=
+FAUNA_SECRET=
 
 NEXT_PUBLIC_ALGOLIA_APP_ID=
 NEXT_PUBLIC_ALGOLIA_INDEX=
 NEXT_PUBLIC_ALGOLIA_SEARCH_KEY=
-NEXT_PUBLIC_BLASEBALL_REFERENCE_API_URL=https://files.blaseball-reference.com/br-public/json
-NEXT_PUBLIC_BLASEBALL_WIKI_URL=https://www.blaseball.wiki/w
-NEXT_PUBLIC_CHRONICLER_API_URL=https://api.sibr.dev/chronicler
-NEXT_PUBLIC_DATABLASE_API_URL=https://api.sibr.dev/datablase/v2
+NEXT_PUBLIC_BLASEBALL_REFERENCE_API=https://files.blaseball-reference.com/br-public/json
+NEXT_PUBLIC_BLASEBALL_WIKI=https://www.blaseball.wiki/w
+NEXT_PUBLIC_CHRONICLER_API=https://api.sibr.dev/chronicler
+NEXT_PUBLIC_DATABLASE_API=https://api.sibr.dev/datablase/v2
 NEXT_PUBLIC_DEPLOYMENT_ENV=preview
-NEXT_PUBLIC_HEAP_IO_KEY=
-NEXT_PUBLIC_REBLASE_URL=https://reblase.sibr.dev
+NEXT_PUBLIC_HEAP_IO_ID=
+NEXT_PUBLIC_REBLASE=https://reblase.sibr.dev
