Add Next.js build caching

--- a/.github/workflows/search-index-prod.yml
+++ b/.github/workflows/search-index-prod.yml
@@ -9,13 +9,21 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+
       - name: Use Node.js
         uses: actions/setup-node@v2
         with:
           node-version: "16"
           cache: "yarn"
+
+      - uses: actions/cache@v2
+        with:
+          path: ${{ github.workspace }}/.next/cache
+          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}
+
       - name: Install dependencies
         run: yarn
+
       - name: Build search index
         run: yarn build:index
         env:
