--- a/package.json
+++ b/package.json
@@ -8,24 +8,25 @@
     "dev": "next dev",
     "build": "next build",
     "build:index": "next build && node ./.next/serverless/scripts/generate-index.js",
+    "lint": "next lint",
     "start": "next start"
   },
   "dependencies": {
-    "@chakra-ui/icons": "^1.0.13",
-    "@chakra-ui/react": "^1.6.3",
-    "@chakra-ui/system": "^1.6.7",
-    "@chakra-ui/theme": "^1.9.0",
-    "@chakra-ui/theme-tools": "^1.1.7",
+    "@chakra-ui/icons": "^1.0.14",
+    "@chakra-ui/react": "^1.6.5",
+    "@chakra-ui/system": "^1.7.1",
+    "@chakra-ui/theme": "^1.9.2",
+    "@chakra-ui/theme-tools": "^1.1.8",
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
-    "@reach/combobox": "^0.15.1",
-    "@reach/skip-nav": "^0.15.0",
+    "@reach/combobox": "^0.15.3",
+    "@reach/skip-nav": "^0.15.3",
     "@zeit/fetch-retry": "^5.0.1",
-    "algoliasearch": "^4.9.2",
+    "algoliasearch": "^4.10.3",
     "faunadb": "^4.3.0",
     "framer-motion": "^4.1.17",
     "lodash.debounce": "^4.0.8",
-    "next": "^10.2.3",
+    "next": "^11.0.1",
     "node-fetch": "^2.6.1",
     "react": "^17.0.2",
     "react-cookie": "^4.0.3",
@@ -37,20 +38,17 @@
     "swr": "^0.5.6"
   },
   "devDependencies": {
-    "@types/node": "^15.12.2",
-    "@types/react": "^17.0.11",
-    "@types/react-table": "^7.7.1",
-    "@typescript-eslint/eslint-plugin": "^4.27.0",
-    "@typescript-eslint/parser": "^4.27.0",
-    "@vercel/node": "^1.11.0",
-    "eslint": "^7.28.0",
+    "@types/node": "^16.4.1",
+    "@types/react": "^17.0.14",
+    "@types/react-table": "^7.7.2",
+    "@typescript-eslint/eslint-plugin": "^4.28.4",
+    "@typescript-eslint/parser": "^4.28.4",
+    "@vercel/node": "^1.11.1",
+    "eslint": "^7.31.0",
+    "eslint-config-next": "^11.0.1",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^3.4.0",
-    "eslint-plugin-react": "^7.24.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "globby": "^11.0.3",
-    "prettier": "^2.3.1",
-    "typescript": "^4.3.2"
+    "globby": "^11.0.4",
+    "prettier": "^2.3.2",
+    "typescript": "^4.3.5"
   }
 }
