--- a/package.json
+++ b/package.json
@@ -12,43 +12,44 @@
     "start": "next start"
   },
   "dependencies": {
-    "@chakra-ui/icons": "^1.0.14",
-    "@chakra-ui/react": "^1.6.5",
-    "@chakra-ui/system": "^1.7.1",
-    "@chakra-ui/theme": "^1.9.2",
-    "@chakra-ui/theme-tools": "^1.1.8",
-    "@emotion/react": "^11.4.0",
-    "@emotion/styled": "^11.3.0",
-    "@reach/combobox": "^0.15.3",
-    "@reach/skip-nav": "^0.15.3",
+    "@chakra-ui/icons": "^2.1.1",
+    "@chakra-ui/react": "^2.8.2",
+    "@chakra-ui/system": "^2.6.2",
+    "@chakra-ui/theme": "^2.3.0",
+    "@chakra-ui/theme-tools": "^2.1.2",
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
+    "@reach/combobox": "^0.18.0",
+    "@reach/skip-nav": "^0.18.0",
     "@zeit/fetch-retry": "^5.0.1",
-    "algoliasearch": "^4.10.3",
-    "faunadb": "^4.3.0",
-    "framer-motion": "^4.1.17",
+    "algoliasearch": "^4.24.0",
+    "faunadb": "^4.8.0",
+    "framer-motion": "^11.3.15",
     "lodash.debounce": "^4.0.8",
-    "next": "^11.0.1",
-    "node-fetch": "^2.6.1",
-    "react": "^17.0.2",
-    "react-cookie": "^4.0.3",
-    "react-csv": "^2.0.3",
-    "react-dom": "^17.0.2",
-    "react-icons": "^4.2.0",
-    "react-table": "^7.7.0",
-    "sitemap": "^7.0.0",
-    "swr": "^0.5.6"
+    "next": "13",
+    "node-fetch": "^2.7.0",
+    "react": "^18.3.1",
+    "react-cookie": "^7.2.0",
+    "react-csv": "^2.2.2",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
+    "react-table": "^7.8.0",
+    "sitemap": "^7.1.2",
+    "swr": "^2.2.5",
+    "tinycolor2": "^1.6.0"
   },
   "devDependencies": {
-    "@types/node": "^16.4.1",
-    "@types/react": "^17.0.14",
-    "@types/react-table": "^7.7.2",
-    "@typescript-eslint/eslint-plugin": "^4.28.4",
-    "@typescript-eslint/parser": "^4.28.4",
-    "@vercel/node": "^1.11.1",
-    "eslint": "^7.31.0",
-    "eslint-config-next": "^11.0.1",
-    "eslint-config-prettier": "^8.3.0",
-    "globby": "^11.0.4",
-    "prettier": "^2.3.2",
-    "typescript": "^4.3.5"
+    "@types/node": "^20.14.12",
+    "@types/react": "^18.3.3",
+    "@types/react-table": "^7.7.20",
+    "@typescript-eslint/eslint-plugin": "^7.17.0",
+    "@typescript-eslint/parser": "^7.17.0",
+    "@vercel/node": "^3.2.7",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "13",
+    "eslint-config-prettier": "^8.10.0",
+    "globby": "^14.0.2",
+    "prettier": "^3.3.3",
+    "typescript": "^5.5.4"
   }
 }
