--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "faunadb": "^4.8.0",
     "framer-motion": "^11.3.15",
     "lodash.debounce": "^4.0.8",
-    "next": "13",
+    "next": "^14.2.5",
     "node-fetch": "^2.7.0",
     "react": "^18.3.1",
     "react-cookie": "^7.2.0",
@@ -46,7 +46,7 @@
     "@typescript-eslint/parser": "^7.17.0",
     "@vercel/node": "^3.2.7",
     "eslint": "^8.57.0",
-    "eslint-config-next": "13",
+    "eslint-config-next": "^14.2.5",
     "eslint-config-prettier": "^8.10.0",
     "globby": "^14.0.2",
     "prettier": "^3.3.3",
