--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && npm run build:index",
     "build:index": "node ./scripts/generate-index.js",
     "lint": "next lint",
     "start": "next start"
