--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
-    "build:index": "next build && node ./.next/serverless/scripts/generate-index.js",
+    "build": "next build && npm run build:index",
+    "build:index": "node ./scripts/generate-index.js",
     "lint": "next lint",
     "start": "next start"
   },
@@ -22,8 +22,8 @@
     "@reach/combobox": "^0.18.0",
     "@reach/skip-nav": "^0.18.0",
     "@zeit/fetch-retry": "^5.0.1",
-    "algoliasearch": "^4.24.0",
     "faunadb": "^4.8.0",
+    "flexsearch": "^0.7.43",
     "framer-motion": "^11.3.15",
     "lodash.debounce": "^4.0.8",
     "next": "^14.2.5",
