Update Dockerfile env vars

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-FAUNA_SECRET=
+# FAUNA_SECRET=
 
 NEXT_PUBLIC_BLASEBALL_REFERENCE_API=https://files.blaseball-reference.com/br-public/json
 NEXT_PUBLIC_BLASEBALL_WIKI=https://www.blaseball.wiki/w
